--- a/unsupervised_nlp_blank.ipynb
+++ b/unsupervised_nlp_blank.ipynb
@@ -528,7 +528,7 @@
     "\n",
     "##########   CODE ABOVE    ##########\n",
     "\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "\n",
     "\n",
     "#define vectorizer parameters\n",
     "\n",
@@ -536,9 +536,9 @@
     "\n",
     "##########   CODE BELOW    ##########\n",
     "\n",
-    "_____________ = ______________(max_df=0.8, max_features=200000,\n",
+    "__________ = __________(max_df=0.8, max_features=200000,\n",
     "                                 min_df=0.2, stop_words='english',\n",
-    "                                 use_idf=True, tokenizer=_____, _____)\n",
+    "                                 use_idf=True, tokenizer=_______, ngram_range=(_, _))\n",
     "\n",
     "##########   CODE ABOVE    ##########\n",
     "\n",
@@ -574,6 +574,7 @@
     "#create KMeans object km with n_clusters = 5\n",
     "\n",
     "##########   CODE BELOW    ##########\n",
+    "\n",
     "\n",
     "##########   CODE ABOVE    ##########\n",
     "\n",
@@ -634,6 +635,8 @@
    "source": [
     "print(\"Top terms per cluster:\")\n",
     "\n",
+    "num_clusters = 5\n",
+    "\n",
     "#sort cluster centers by proximity to centroid\n",
     "order_centroids = km.cluster_centers_.argsort()[:, ::-1] \n",
     "\n",
@@ -676,9 +679,14 @@
    "outputs": [],
    "source": [
     "#import cosine_similarity from sklearn.metrics.pairwise\n",
-    "#calculate similarity_distance as 1 - cosine_similarity\n",
+    "\n",
+    "#calculate cosine_similarity with argument tfidf_matrix and store in variable cs \n",
+    "\n",
+    "#calculate similarity_distance as 1 - cs\n",
     "\n",
     "##########   CODE BELOW    ##########\n",
+    "\n",
+    "\n",
     "\n",
     "##########   CODE ABOVE    ##########"
    ]
@@ -692,6 +700,7 @@
     "#import matplotlib.pyplot as plt and configure it to output inline\n",
     "\n",
     "##########   CODE BELOW    ##########\n",
+    "\n",
     "\n",
     "##########   CODE ABOVE    ##########"
    ]
@@ -719,7 +728,7 @@
     "\n",
     "##########   CODE BELOW    ##########\n",
     "\n",
-    "mergings = _______(______, method='complete')\n",
+    "\n",
     "\n",
     "# Plot the dendrogram, using titles as labels\n",
     "dendrogram(mergings,\n",
